@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mcollective-0.4.3 (25 Jan 2010)
+
+  25 Jan 2010; Lance Albertson <ramereth@gentoo.org>
+  +mcollective-0.4.3.ebuild:
+  Version bump
+
   19 Jan 2010; Lance Albertson <ramereth@gentoo.org>
   mcollective-0.4.2.ebuild, files/mcollectived.initd:
   Fix restart in the init script. Add informative bits after the package is
